# ncmdownloader-rs

./: Cargo.toml  README.md  icon.rc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  cli.rs  config.rs  download.rs  main.rs  main.ts  metadata.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  download.rs  lib.rs  main.rs  metadata.rs  util.rs
src/components/: AvatarCard.vue
src/router/: index.ts
src/views/: Downloads.vue  Settings.vue
