[package]
name = "ncmdownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
ncm-api = { git = "https://github.com/fecwaqw/netease-cloud-music-api-reqwest.git", rev = "e06d2e7", package = "netease-cloud-music-api-reqwest" }
anyhow = "1.0.101"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["stream"] }
futures-util = "0.3.31"
bytes = "1.11.1"
url = "2.5"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_with = "3.16.1"
cookie_store = "0.22.0"
indicatif = "0.18.3"
thiserror = "2.0.18"
unicode-segmentation = "1.12.0"
lofty = "0.21"
